# CTD25

./: .gitignore  README.md
It1_interfaces/: Board.py  Client (1)n.py  Client.py  Command.py  Game.py  Game_new.py  Graphics.py  GraphicsFactory.py  KeyboardInput.py  Moves.py  Names.json  NewPieceFactory.py  NewState.py  Physics.py  PhysicsFactory.py  Piece.py  PieceFactory.py  README_CLIENT_SERVER.md  SUMMARY.md  Server.py  State.py  StateContext.py  StatePattern.py  config.json  demo.bat  draft.py  img.py  main.py  main_new.py  mock_img.py  requirements.txt  run_client.py  run_server.py  start_client.bat  start_server.bat  test_pawn_promotion.py  test_run.py  test_state_transitions.py
It1_interfaces/Observer/: Event.py  EventType.py  GameOverEvent.py  GameStartEvent.py  MoveLogger.py  MoveMadeEvent.py  PieceCaptureEvent.py  Publisher.py  ScoreTracker.py  StartTracker.py  Subscriber.py  WinnerTracker.py  test_moves.py  test_score_tracker.py
It1_interfaces/tests/: test_board.py  test_capture_simple.py  test_command.py  test_complete_system.py  test_config_usage.py  test_game.py  test_jump.py  test_jump_in_place.py  test_keys.py  test_moves.py  test_multi_promotion.py  test_new_state_pattern.py  test_pawn_promotion.py  test_physics.py  test_real_promotion.py  test_simple_state.py  test_wasd.py
cpp/: CMakeLists.txt  README.md
cpp/src/: img.cpp  img.hpp  main.cpp
java/: README.md  pom.xml
java/src/main/java/: Example.java  Img.java
pieces/: board.csv
pieces/BW/states/idle/: config.json
pieces/KW/: moves.txt
pieces/NW/: moves.txt
pieces/PB/: moves.txt
pieces/PW/: moves.txt
pieces/QW/: moves.txt
pieces/RW/: moves.txt
py/: example.py  img.py
tests/: test_graphics.py  test_hello.py  test_piece.py  test_state.py  test_winner_tracker.py
(+5 files in other folders)
